# lockup

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  Rocket.toml  renovate.json  sqlx-data.json
.github/workflows/: docker-publish-all.yaml  docker-publish-all.yml
.sqlx/: query-235172003de3329d92c906968225e62c4631762b194d2ec7695cfd317f2ae2e1.json  query-4cb92f0348ae838909979a7ec8db78785ed0825a2b330ee8f1cb7c4df02efc31.json  query-fa8ffbdc013e8856b94febfdc20a0cadc5a33358b6d321cfdf551e113554b138.json
migrations/: 20230714100427_initial.sql
src/: main.rs
templates/: index.html.hbs  thingrow.html.hbs
web/: package-lock.json  package.json  webpack.config.js
web/src/: index.ts
web/src/scss/: main.scss
