[package]
edition = "2021"
name = "lockup"
version = "0.1.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde_json = "1.0"
url = "2.4.0"
url_serde = "0.2.0"

[dependencies.rocket_db_pools]
features = ["sqlx_sqlite"]
version = "=0.1.0-rc.3"

[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = ["sqlite", "macros", "offline", "migrate"]
