[package]
edition = "2021"
name = "lockup"
version = "0.1.0"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
serde = "1.0.191"
rocket_dyn_templates = { version = "0.1.0-rc.4", features = ["handlebars"] }
serde_json = "1.0"
url = "2.4.1"
url_serde = "0.2.0"

[dependencies.rocket_db_pools]
features = ["sqlx_sqlite"]
version = "=0.1.0-rc.4"

[dependencies.sqlx]
version = "0.7.2"
default-features = false
features = ["sqlite", "macros", "migrate", "chrono"]
